# libadb

./: Makefile.am  README.md  configure.in  open.sh
Xcode/libadb.xcodeproj/: project.pbxproj
Xcode/libadb.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/libadb.xcodeproj/project.xcworkspace/xcshareddata/: libadb.xccheckout
adb/: Makefile.am
include/cutils/: properties.h
libcutils/: Makefile.am  sockets.c
libmincrypt/: Makefile.am
